ansible/roles/api/files/security/ip6tables
# Generated by ip6tables-save v1.4.7 on Sat May 24 22:32:08 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p ipv6-icmp -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -j LOG --log-prefix "INPUT6 DROP: " 
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited 
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited 
COMMIT
# Completed on Sat May 24 22:32:08 2014
