ansible/roles/api/files/security/iptables
# Generated by iptables-save v1.4.7 on Tue Jun 10 14:14:35 2014
*nat
:PREROUTING ACCEPT [430555:44276434]
:POSTROUTING ACCEPT [960396:60723556]
:OUTPUT ACCEPT [960396:60723556]
COMMIT
# Completed on Tue Jun 10 14:14:35 2014
# Generated by iptables-save v1.4.7 on Tue Jun 10 14:14:35 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1217576:184520086]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5000 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5020 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 5672 -m state --state NEW -j ACCEPT 
-A INPUT -j LOG --log-prefix "INPUT DROP: " 
-A INPUT -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Tue Jun 10 14:14:35 2014
