ansible/roles/api/files/security/rules.v4
# Generated by iptables-save v1.4.14 on Tue Feb 24 01:26:01 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o tun+ -j MASQUERADE
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:PUBLIC - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -j PUBLIC
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j LOG --log-prefix "INPUT DROP: "
-A FORWARD -o tun+ -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
-A PUBLIC -p icmp -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 22 -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 80 -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 443 -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 1194 -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 1195 -j ACCEPT
-A PUBLIC -p tcp -m tcp --dport 5672 -j ACCEPT
COMMIT
# Completed on Tue Feb 24 01:26:01 2015
